k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-api
  namespace: news-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news-api
  template:
    metadata:
      labels:
        app: news-api
    spec:
      containers:
        - name: news-api
          image: 937171575739.dkr.ecr.us-east-1.amazonaws.com/backend-news-api:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
