k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-api-service
  namespace: news-api
spec:
  type: LoadBalancer
  selector:
    app: news-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
